k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sumo-k8
  labels:
    name: sumo-k8
