k8s/queue-dashboard-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-dashboard-api
  namespace: sumo-k8
  labels:
    app.kubernetes.io/name: queue-dashboard-api
spec:
  selector:
    app.kubernetes.io/name: queue-dashboard-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
