k8s/queue-dashboard-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-dashboard-web
  namespace: sumo-k8
  labels:
    app.kubernetes.io/name: queue-dashboard-web
spec:
  selector:
    app.kubernetes.io/name: queue-dashboard-web
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: LoadBalancer
