k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sumo-k8-controller
  namespace: sumo-k8
  labels:
    app: sumo-k8-controller
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: sumo-k8-controller
